<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/judul_doa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_doa"
        android:textSize="20sp"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="137dp" />

    <TextView
        android:id="@+id/ayat_doa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayat_doa"
        android:textSize="17sp"
        android:layout_below="@+id/judul_doa"
        android:layout_alignStart="@+id/judul_doa"
        android:layout_marginTop="75dp" />

    <TextView
        android:id="@+id/ejaan_doa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejaan_doa"
        android:textSize="17sp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/ayat_doa"
        android:layout_alignEnd="@+id/judul_doa" />
    <TextView
        android:id="@+id/arti_doa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arti_doa"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/ejaan_doa"
        android:layout_alignStart="@+id/ejaan_doa" />


</RelativeLayout>